Fix socials button alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,22 +4,18 @@
   	box-sizing: border-box;
 }
 
-html {
-	height: 100%;
-	line-height: 1.5;
-	letter-spacing: 0;
-	font-size: 16px;
-}
-
 body {
 	background-color: #111;
+	color: white;
+	font-family: "Poppins", sans-serif;
+	line-height: 1.5;
+	letter-spacing: 0;
 	min-width: 320px;
-	min-height: 100%;
+	min-height: 100vh;
 	padding-bottom: 200px;
 	margin: 0;
-	font-family: "Poppins", sans-serif;
+	font-size: 16px;
 	position: relative;
-	color: white;
 }
 
 h1, h2 {
@@ -148,6 +144,7 @@ footer {
 .socials {
 	display: flex;
 	gap: 1em;
+	justify-content: center;
 	-webkit-user-select: none;
 	user-select: none;
 }
